TCOTA-389 update unit tests